--- a/ClubEcommerce/src/Ecommerce.Api/appsettings.json
+++ b/ClubEcommerce/src/Ecommerce.Api/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "Ecommerce": "Server=(localdb)\\MSSQLLocalDB;Database=clubecommerce;Trusted_Connection=True"
     }
-  },
-  "AllowedHosts": "*"
 }
