Creating the database through migrations

--- a/ClubEcommerce/src/Ecommerce.Api/appsettings.json
+++ b/ClubEcommerce/src/Ecommerce.Api/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "Ecommerce": "Server=(localdb)\\MSSQLLocalDB;Database=clubecommerce;Trusted_Connection=True"
+        "Ecommerce": "Server=(localdb)\\MSSQLLocalDB;Database=clubecommercedev;Trusted_Connection=True"
     }
 }
